fix layout, fix header z-index

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,3 +19,7 @@
 .text-shadow {
 	text-shadow: 0px 2px 5px rgb(0, 0, 0, 0.75);
 }
+
+#__nuxt {
+	@apply antialiased min-h-screen bg-books;
+}
